app/assets/stylesheets/styles/albums_new.scss
.albums-new {
	background-color: $gray;
  font-family: $body-font;
  min-height: 60em;

	h2 {
    font-size: 2em;
    color: $dark-purple;

    font-family: $body-font;
    padding-left: 0.2em;
    width: 100%;
    background-color: $light-purple;
    margin: 0;
	}

	.big-label {
		font-size: 1.3em;
	}

	label {
		color: black;
		font-size: 1.1em;

	}

	input[type="submit"] {
		color: $dark-purple;
		background-color: $light-purple;
		font-size: 1em;
	}

	input[type="submit"]:hover {
		color: $light-purple;
		background-color: $dark-purple;
	}
}

